[package]
name = "hers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
enum_dispatch = "0.3.13"
itertools = "0.13.0"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
primal = "0.3.3"
rand = "0.8.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
